fix: button covered fix

--- a/src/pages/training-page/joint-training/joint-invites/invite-card/invite-card.module.css
+++ b/src/pages/training-page/joint-training/joint-invites/invite-card/invite-card.module.css
@@ -124,7 +124,7 @@
 @media (max-width: 900px) {
     .invite-card__btns-wrapper {
         align-self: flex-end;
-        width: 90%;
+        width: 100%;
     }
 }
 
